--- a/index.html
+++ b/index.html
@@ -141,18 +141,19 @@
         </div>
 
     </div>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gl-matrix/2.8.1/gl-matrix-min.js"
+        integrity="sha512-zhHQR0/H5SEBL3Wn6yYSaTTZej12z0hVZKOv3TwCUXT1z5qeqGcXJLLrbERYRScEDDpYIJhPC1fk31gqR783iQ=="
+        crossorigin="anonymous" defer></script>
+    <script type="text/javascript" src="./state.js"> </script>
+    <script type="text/javascript" src="./hollowObject.js"> </script>
+    <script type="text/javascript" src="./webGl.js"> </script>
+    <script type="text/javascript" src="./utility.js"> </script>
+    <script type="text/javascript" src="./main.js"> </script>
+    <script type="text/javascript" src="./dom.js"> </script>
 </body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-    crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gl-matrix/2.8.1/gl-matrix-min.js"
-    integrity="sha512-zhHQR0/H5SEBL3Wn6yYSaTTZej12z0hVZKOv3TwCUXT1z5qeqGcXJLLrbERYRScEDDpYIJhPC1fk31gqR783iQ=="
-    crossorigin="anonymous" defer></script>
-<script type="text/javascript" src="./state.js"> </script>
-<script type="text/javascript" src="./dom.js"> </script>
-<script type="text/javascript" src="./webGl.js"> </script>
-<script type="text/javascript" src="./utility.js"> </script>
-<script type="text/javascript" src="./main.js"> </script>
+
 
 </html>
