Add beberapa fungsional dasar dan load file yang sedikit buggy

--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
                         <div class="slider-container">
                             <label for="translate-x" class="form-label">Translate-x</label>
                             <p class="d-inline value-input" id="translate-x-value">0</p>
-                            <input type="range" min="-400" max="400" value="0" step="1" class="form-range" id="translate-x">
+                            <input type="range" min="-700" max="700" value="0" step="1" class="form-range" id="translate-x">
                             <label for="translate-y" class="form-label">Translate-y</label>
                             <p class="d-inline value-input" id="translate-y-value">0</p>
-                            <input type="range" min="-400" max="400" value="0" step="1" class="form-range" id="translate-y">
+                            <input type="range" min="-500" max="500" value="0" step="1" class="form-range" id="translate-y">
                             <label for="translate-z" class="form-label">Translate-z</label>
                             <p class="d-inline value-input" id="translate-z-value">0</p>
-                            <input type="range" min="-400" max="400" value="0" step="1" class="form-range" id="translate-z">
+                            <input type="range" min="-700" max="700" value="0" step="1" class="form-range" id="translate-z">
                         </div>
                     </div>
                 </div>
@@ -117,8 +117,8 @@
                         <div class="title-tools"> Camera</div>
                         <div class="slider-container">
                             <label for="radius" class="form-label">Radius</label>
-                            <p class="d-inline value-input" id="camera-radius-value">89</p>
-                            <input type="range" min="0" max="179" value="89" step="1" class="form-range" id="camera-radius">
+                            <p class="d-inline value-input" id="camera-radius-value">5</p>
+                            <input type="range" min="0" max="105" value="5" step="1" class="form-range" id="camera-radius">
                             <label for="rotate" class="form-label">Rotate</label>
                             <p class="d-inline value-input" id="camera-rotate-value">0</p>
                             <input type="range" min="-360" max="360" value="0" step="1" class="form-range" id="camera-rotate">
@@ -135,8 +135,8 @@
                 <div class="col-3 pe-5 pt-4">
                     <label for="projectionView" class="form-label">Projection</label>
                     <select class="form-select mb-3" id="projection-view">
-                        <option value="1" selected>Orthographic</option>
-                        <option value="2">Perspective</option>
+                        <option value="1">Orthographic</option>
+                        <option value="2" selected>Perspective</option>
                         <option value="3">Oblique</option>
                     </select>
                     <label for="fileInput" class="form-label">Load File</label>
